@@ -1,3 +1,7 @@
+Sun Nov  6 01:52:31 2016  Akira Matsuda  <ronnie@dio.jp>
+
+	* lib/erb.rb: Alias regist_scanner to register_scanner
+
 Sun Nov  6 01:39:36 2016  Shugo Maeda  <shugo@ruby-lang.org>
 
 	* compile.c (tailcallable_p): disable tail call optimization for
